@@ -20,9 +20,9 @@
 #define _UTILS_H
 
 
-gint run_dialog(gchar *title, gchar *message, gchar *cancel_message, gchar *action_message);
+int run_dialog(gchar *title, gchar *message, gchar *cancel_message, gchar *action_message);
 void run_dialog_error(gchar *title, gchar *msg);
-gint run_dialog_information(gchar *title, gchar *msg);
+void run_dialog_information(gchar *title, gchar *msg);
 int check_url(char *str1, char *str2);
 gboolean check_url_already_exists(gchar *checkurl);
 gboolean check_server_already_exists(gchar *checkurl);
